--- a/default.htm
+++ b/default.htm
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" href="app.css" type="text/css" />
-    <script src="lib/jquery.js"></script>
-	<script src="lib/angular.js"></script>
+    <script src="scripts/jquery-2.0.3.js"></script>
+	<script src="scripts/angular.js"></script>
     <script src="prohazko.tlv.js"></script>
 </head>
 <body>
